chap12/istiospec/ingress-with-cert.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cncamp-istio-virtualservice
spec:
  gateways:
    - cncamp-istio-gateway
  hosts:
    - cncamp.com
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: cncamp.default.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cncamp-istio-gateway
spec:
  selector:
    istio: ingress
  servers:
    - hosts:
        - cncamp.com
      port:
        name: cncamp-istio-virtualservice
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-istio-credential
